feat: implement transaction management features including user-specific transaction retrieval and transaction creation modal